// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.update > functionality > update amount > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "amount": "446.4600",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "203.2500",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "PGK",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "Censura adaugeo cuius derelinquo ultio aduro benigne atrox.",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "amount": "-203.2500",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "amount": "581.8200",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "amount": "-581.8200",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "currencyCode": "PGK",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "673.0100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "MZN",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "Censura adaugeo cuius derelinquo ultio aduro benigne atrox.",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "currencyCode": "MZN",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "currencyCode": "MMK",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "currencyCode": "MMK",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:cd1b3823-cff5-4bd5-a08d-a2cb5d1b1f42|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "note": "maiores saepe blanditiis",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "amount": "716.5100",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:1806301f-ce66-492a-95fb-d4d72a3a721a|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "-125.6500",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "GNF",
        "id": "1806301f-ce66-492a-95fb-d4d72a3a721a",
        "note": "debitis praesentium maxime",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "-406.6400",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "PGK",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "Censura adaugeo cuius derelinquo ultio aduro benigne atrox.",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:1806301f-ce66-492a-95fb-d4d72a3a721a|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "note": "debitis praesentium maxime",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "amount": "406.6400",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:40cf0e25-38a5-4065-8e1f-0ce1369efbae|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "amount": "-50.6100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "FJD",
        "id": "40cf0e25-38a5-4065-8e1f-0ce1369efbae",
        "note": "libero voluptas nihil",
        "ownerAccountId": "936dc415-3840-4d57-bd8b-051cc031ac1c",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "5ed836c2-3f35-4159-9efd-fa79edcf2760",
      },
    },
  },
  "updated": {
    "debts": {
      "id:40cf0e25-38a5-4065-8e1f-0ce1369efbae|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "note": "libero voluptas nihil",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "amount": "-329.2200",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "amount": "329.2200",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:cd1b3823-cff5-4bd5-a08d-a2cb5d1b1f42|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "amount": "891.8700",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "amount": "-248.2200",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:1806301f-ce66-492a-95fb-d4d72a3a721a|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "545.9200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "GNF",
        "id": "1806301f-ce66-492a-95fb-d4d72a3a721a",
        "note": "Adeptio contabesco voluntarius cohaero suus suppellex.",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "-512.5200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "PGK",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "Censura adaugeo cuius derelinquo ultio aduro benigne atrox.",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:1806301f-ce66-492a-95fb-d4d72a3a721a|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "amount": "-545.9200",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "amount": "512.5200",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:40cf0e25-38a5-4065-8e1f-0ce1369efbae|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "amount": "724.3400",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "FJD",
        "id": "40cf0e25-38a5-4065-8e1f-0ce1369efbae",
        "note": "Sonitus deduco agnosco adaugeo suscipio capillus.",
        "ownerAccountId": "936dc415-3840-4d57-bd8b-051cc031ac1c",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "5ed836c2-3f35-4159-9efd-fa79edcf2760",
      },
    },
  },
  "updated": {
    "debts": {
      "id:40cf0e25-38a5-4065-8e1f-0ce1369efbae|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "amount": "-724.3400",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "amount": "-588.8400",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "amount": "588.8400",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:cd1b3823-cff5-4bd5-a08d-a2cb5d1b1f42|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "note": "neque temporibus quod",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "note": "id consequuntur distinctio",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:1806301f-ce66-492a-95fb-d4d72a3a721a|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "-125.6500",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "GNF",
        "id": "1806301f-ce66-492a-95fb-d4d72a3a721a",
        "note": "voluptatum tempora aliquid",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "673.0100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "PGK",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "autem molestias distinctio",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:1806301f-ce66-492a-95fb-d4d72a3a721a|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "note": "voluptatum tempora aliquid",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "note": "autem molestias distinctio",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:40cf0e25-38a5-4065-8e1f-0ce1369efbae|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "amount": "-50.6100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "FJD",
        "id": "40cf0e25-38a5-4065-8e1f-0ce1369efbae",
        "note": "similique eum saepe",
        "ownerAccountId": "936dc415-3840-4d57-bd8b-051cc031ac1c",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "5ed836c2-3f35-4159-9efd-fa79edcf2760",
      },
    },
  },
  "updated": {
    "debts": {
      "id:40cf0e25-38a5-4065-8e1f-0ce1369efbae|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "note": "similique eum saepe",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "note": "accusantium minus nobis",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "amount": "-768.9800",
        "currencyCode": "TTD",
        "note": "iste voluptas asperiores",
        "receiptId": "cd1b3823-cff5-4bd5-a08d-a2cb5d1b1f42",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "-829.4100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "LBP",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "numquam unde ab",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": "1806301f-ce66-492a-95fb-d4d72a3a721a",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "amount": "829.4100",
        "currencyCode": "LBP",
        "note": "numquam unde ab",
        "receiptId": "1806301f-ce66-492a-95fb-d4d72a3a721a",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "amount": "-265.0100",
        "currencyCode": "XCD",
        "receiptId": "40cf0e25-38a5-4065-8e1f-0ce1369efbae",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "amount": "265.0100",
        "currencyCode": "XCD",
        "note": "vitae maiores distinctio",
        "receiptId": "40cf0e25-38a5-4065-8e1f-0ce1369efbae",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties with multiple requests > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "amount": "832.5400",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties with multiple requests > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "-670.7800",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "PGK",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "Censura adaugeo cuius derelinquo ultio aduro benigne atrox.",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "amount": "670.7800",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties with multiple requests > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "amount": "613.1500",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "amount": "-613.1500",
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "note": "omnis facilis sunt",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "673.0100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "PGK",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "veniam nostrum modi",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "note": "veniam nostrum modi",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "note": "amet eius accusamus",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "receiptId": "cd1b3823-cff5-4bd5-a08d-a2cb5d1b1f42",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "673.0100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "PGK",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "Censura adaugeo cuius derelinquo ultio aduro benigne atrox.",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": "1806301f-ce66-492a-95fb-d4d72a3a721a",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "receiptId": "1806301f-ce66-492a-95fb-d4d72a3a721a",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "receiptId": "40cf0e25-38a5-4065-8e1f-0ce1369efbae",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "receiptId": "40cf0e25-38a5-4065-8e1f-0ce1369efbae",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:d191f879-e2dd-4af3-9b5c-6c9258a20525|ownerAccountId:2ea43e91-c80f-4ac6-bd85-8d5cb1a3206b": {
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:ea31f8ed-08b6-4699-b27e-5df2e3f81806": {
        "amount": "673.0100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "PGK",
        "id": "8569b1b9-7d79-4f7c-b8bb-f46d31bf0285",
        "note": "Censura adaugeo cuius derelinquo ultio aduro benigne atrox.",
        "ownerAccountId": "ea31f8ed-08b6-4699-b27e-5df2e3f81806",
        "receiptId": null,
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d398122b-2188-4065-a0d2-576702119707",
      },
    },
  },
  "updated": {
    "debts": {
      "id:8569b1b9-7d79-4f7c-b8bb-f46d31bf0285|ownerAccountId:bb892467-ae05-4503-8065-cf1878f31511": {
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:936dc415-3840-4d57-bd8b-051cc031ac1c": {
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
      "id:69883848-9566-4177-a293-5b80e89a128c|ownerAccountId:b3f2866a-1065-410d-a3c8-0361c713e468": {
        "timestamp": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.update > input verification > mixed success and fail 1`] = `
{
  "updated": {
    "debts": {
      "id:8360fffd-df63-44fc-843f-a9c4554dcee6|ownerAccountId:1d263b1a-801e-44e4-a018-32c2cbc9f60e": {
        "amount": "-384.8800",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;
